Page MenuHome GnuPG

Certificate serial number in hexadecimal base should be marked as such
Closed, ResolvedPublic

Description

Verbose output of dirmngr:

dirmngr[31931]: S/N 042653 is valid, it is not listed in the CRL

Number 042653 looks like an octal-based number (because of leading 0). According
code (hexify_data()) it's hexadecimal base. Without the leading zero, one could
say it's decimal base.

Details

Version
1.0.3

Event Timeline

petr_p set Version to 1.0.3.
petr_p added a subscriber: petr_p.
werner lowered the priority of this task from Normal to Wishlist.Oct 12 2009, 9:13 AM
werner removed a project: Bug Report.
werner added a project: Feature Request.
neal added a subscriber: neal.

Werner: This patch is still relevant and it only changes diagnostics so it
shouldn't impact any existing code. Okay to apply?

Fixed with commit 12c665b for gnupg 2.1.11.
The patch is different to not break the translations.

werner claimed this task.